--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
+    "saas": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.89.2"
   }
 }
